Provar Weather Assignment/weather report/force-app/main/default/objects/Weather_Information__c/Weather_Information__c.object-meta.xml
<CustomObject>
    <label>Weather Information</label>
    <nameField>
        <displayFormat>WI-{000000}</displayFormat>
        <label>Weather Information Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Weather Information</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>