Provar Weather Assignment/weather report/force-app/main/default/objects/Weather_Information__c/fields/Temperature_Max__c.field-meta.xml
<CustomField>
    <fullName>Temperature_Max__c</fullName>
    <label>Temperature Max</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>