Provar Weather Assignment/weather report/force-app/main/default/objects/Weather_Information__c/fields/Weather_Location__c.field-meta.xml
<CustomField>
    <fullName>Weather_Location__c</fullName>
    <label>Weather Location</label>
    <referenceTo>Weather_Location__c</referenceTo>
    <relationshipLabel>Weather Information</relationshipLabel>
    <relationshipName>Weather_Information</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>